package message;
option optimize_for = LITE_RUNTIME;
option java_outer_classname = "UserInfoUpdate";

message UserInfoUpdateRequest
{
	required UpdateType type = 1;//修改目标类型
	optional string name = 2;//名字
	optional uint32 iconId = 3;//头像id
	
  enum UpdateType
	{
			User_IconId = 1;
			User_Name = 2;
	}
}

message UserInfoUpdateResponse
{
	required UpdateState state = 1;//更新结果状态
	enum UpdateState
  {
		OK = 1;
		FAIL = 2;
		NOMONEY = 3;
	}
	
}